    working implementation anymore. If sbrk/brk() are not usable, but mmap()
    is available, use mmap() for mapping anonymous memory which we then use.
    If mmap() is not available, use the old fallback (system malloc()).
    Changed some precompiler checks for SBRK_OK, which should be
    REPLACE_MALLOC. (#640)
    (slaballoc.c, xalloc.c, configure.in)

27-May-2009 (Gnomi)
  - (ed.c, comm.c) Put ed sessions into the input_to list of interactive
    objects, so now they have a common noecho and prompt handling. (Bug #522)
  - (call_out.c, backend.c) Corrected the timing of call_outs from inside
    a heartbeat. (Bug #375)
  - (comm.c) Allow sending \0 with binary_message(). (Bug #71)
  - (comm.c) Enable IAC quoting by default, allow enabling '\0'
    and disabling '\n' in connection charsets.

26-May-2009 (Fuchur)
  - (ed.c) Fix bogus reference increment in clear_ed_buffer_refs()

26-May-2009 (Zesstra)
  - (func_spec) Marked efun cat() as deprecated. (#637)

19-May-2009 (Gnomi)
  - (prolang.y, interpret.c) Corrected the handling of implicit context
    variables in nested inline closures and allowed the initializers
    of explicit context variables to reference other explicit context
    variables. (Bug #631)
  - (main.c, comm.c) Set the close-on-exec-flag on open file descriptors,
    so they are not passed to erq. (Bug #629)
  - (pkg-tls.h, pkg-openssl.c, pkg-gnutls.c, main.c, configure)
    Allow TLS to be deactivated per default or command line. (Bug #479)

18-May-2009 (Gnomi)
  - (pkg-xml2.c, arraylist.c, configure) Added support for XML parsing
    using libxml2. (Bug #538, thanks, Bardioc!)
  - (interpret.c) Ignore any arguments passed to a variable closure
    instead of throwing an error. (Bug #612)

>>>>>>> .r2594
12-May-2009 (Fuchur)
  - (object.c) compile fix for !USE_NEW_INLINES
  - (prolang.y) forbid accessing closure arguments from within the
    closure's context.
  - (prolang.y) Fix infinite loop when redefining a closure argument